Thu Sep  06 03:01:56 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made the Ewl_CheckButton & Ewl_RadioButton use  Nathan's new code.
	* Created new ebits for the Ewl_Button, Ewl_CheckButton &
	  Ewl_RadioButton to work with Nathan's code.

Wed Sep  05 14:30:22 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some minor bugs from Nathan's changes. They were mostly typos.

Tue Sep  04 00:00:00 2001 Nathan Ingersoll <ningerso@d.umn.edu>
        * Major restructuring of widget heirarchy to eliminate code redundancy.
          Widgets now make extensive use of callbacks to achieve inheritance in
          the methods as well as the data structures.
        * Ripped out large amounts of now redundant code.

Tue Aug  21 20:41:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed minor bug in the Ewl_Callbck code.
	* Cleaned up the test program a bit.

Tue Aug  21 18:46:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some unwanted behaviour in the Ewl_Box code.

Tue Aug  21 16:17:49 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Improved __ewl_button_update_label a bit.
	* Made the size of the Ewl_Text etox area allways be the actual size
	  of it without breaking rows.
	* Added a button test part to the test program.
	* Fixed some minor bugs in the Ewl_CheckButton & Ewl_RadioButton
	  widget.

Tue Aug  21 02:18:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Some more typos fixed in the box code.
	* Extended the box test program to be able to change child alignments
	  dynamically.
	* Added Ewl_Alignment ewl_object_get_alignment(Ewl_Object * o)
	  and Ewl_Fill_Policy ewl_object_get_fill_policy(Ewl_Object * o)
	  to be able to query the alignment & fill_policy.

Mon Aug  20 23:05:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed _LOTS_ of typos in the box widget whiched caused very odd
	  behaviour.